fix color contrasts for p elements

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2217,6 +2217,7 @@ button.alt:active,
 
 #features p {
     text-align: center;
+    color: rgb(78, 61, 70);
 }
 
 #features ul.actions {
